--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
+				<a href="https://twitter.com/DhirajKumarJai3" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-twitter"></i>
 					</span>
@@ -57,7 +57,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
+					Smartwork is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
 				</p>
 			</div>
 		</section>
@@ -127,7 +127,7 @@
 		
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<a href="http://www.hassanali.me/about">Hassan Ali</a>
+			<a href="http://www.hassanali.me/about">Dhiraj Kumar Jain</a>
 		</section>
 		
 		<!-- Scripts  -->
