--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="#about">About</a>
-				<a class="nav-item" href="#projects">Projects</a>
+				<a class="nav-item" href="https://github.com/TheAlgo">Projects</a>
 				<a class="nav-item" href="#social">Social</a>
 			</div>
 
@@ -67,7 +67,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Smartwork is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
+					Smartwork is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Creative Mind with mindblowing problem solving techniques.
 				</p>
 			</div>
 		</section>
