--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 								</div>
 								<div>			
 									<p>
-										They don’t want us to eat. I told you all this before, when you have a swimming pool, do not use chlorine, use salt water, the healing, salt water is the healing.
+										Decentralised community sharing farming platform built on Ethereum Block-chain
+
 									</p>
 								</div>
 							</article>
@@ -108,8 +109,7 @@
 								</div>
 								<div>			
 									<p>
-										Bless up. Another one. How’s business? Boomin. Don’t ever play yourself. Life is what you make it, so let’s make it.
-									</p>
+										Decentralised platform for sharing of files using MEAN stack and typescript
 								</div>
 							</article>
 						</div>
