--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<a target="_blank" href="https://www.linkedin.com/in/thealgo/"><img class="" src="assets/img/linkedin.png"></a>
 					</div>
 					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://www.facebook.com/dhiraj.jain.146069"><img class="" src="assets/img/facebook.png"></a>
+						<a target="_blank" href="https://https://github.com/TheAlgo"><img class="" src="assets/img/github.png"></a>
 					</div>
 				</div>
 			</div>
@@ -137,7 +137,7 @@
 		
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<a href="http://www.hassanali.me/about">Dhiraj Kumar Jain</a>
+			<a href="http://www.thealgo.tech">Dhiraj Kumar Jain</a>
 		</section>
 		
 		<!-- Scripts  -->
